--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blossoming Flowers</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.scss">
 </head>
 <body>
   
@@ -308,6 +308,6 @@
     </div>
   </div>
 
-  <script src="scripts.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
